App now runs in a Docker image